update html file and review work done

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                     <img src="./images/TT-font.png" alt="TTfont">
                                     <P>Verdana</P>
                                 </div>
-                                <div>
+                                <div class="flex font_scroll>
                                     <img src="./images/TT-font.png" alt="TTfont">
                                     <p>Verdana</p>
                                 </div>
